--- a/index.html
+++ b/index.html
@@ -349,7 +349,17 @@
         </section>
         
         <footer class="footer">
-            Footer
+            <ul class="nav">
+                <li class="nav__item"><a href="#" class="nav__link">Finding your dream home </a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Request proposal </a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Download home palnner</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact us</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Submit your property</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
+            </ul>
+            <p class="copyright">
+                &copy; Copyright 2020 by <a href="https://www.linkedin.com/in/kajal-singh-aa644588/"  target="_blank" class="copyright__link">KAJAL SINGH</a> All Rights reserved. This website has been made to showcase my frontend development skills using Advanced CSS3 & SASS preprocessor. 
+            </p>
         </footer>
     </body>
 </html>
