--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
         </div>
 
         <div class="header">
-            HEADER
+            <img src="img/logo.png" alt="Nexter logo" class="header__logo">
+            <h3 class="heading-3">Your own home:</h3>
+            <h1 class="heading-1">The Ultimate personal freedom</h1>
+            <button class="btn header__btn">View our properties</button>
+            <div class="header__seenon-text">Seen on</div>
+            <div class="header__seenon-logos">
+                <img src="img/logo-bbc.png" alt="Seen on Logo 1">
+                <img src="img/logo-forbes.png" alt="Seen on Logo 2">
+                <img src="img/logo-techcrunch.png" alt="Seen on Logo 3">
+                <img src="img/logo-bi.png" alt="Seen on Logo 4">
+            </div>
         </div>
 
         <div class="realtors">
