index.html update

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="sass/main.css">
         <link rel="shortcut icon" type="image/png" href="img/favicon.png">
         
-        <title>nexter &mdash; your home, your freedom</title>
+        <title>Nexter Homes &mdash; your home, your freedom</title>
     </head>
     <body class="container">
         <div class="sidebar">
@@ -387,7 +387,7 @@
                 <li class="nav__item"><a href="#" class="nav__link">Come work with us</a></li>
             </ul>
             <p class="copyright">
-                &copy; Copyright 2020 by <a href="https://www.linkedin.com/in/kajal-singh-aa644588/"  target="_blank" class="copyright__link">KAJAL SINGH</a> All Rights reserved. This website has been made to showcase my frontend development skills using Advanced CSS3 & SASS preprocessor. 
+                &copy; Copyright 2020 by <a href="https://github.com/Ar8official/Nexter_Homes"  target="_blank" class="copyright__link">Azeez Abdulrahman.</a> This website was made  using Advanced CSS3 & SASS preprocessor. 
             </p>
         </footer>
     </body>
